Updated coloc analysis

--- a/01_Colocalization/scripts/02_cis_eqtl_cis_pqtl_colocalization.ipynb
+++ b/01_Colocalization/scripts/02_cis_eqtl_cis_pqtl_colocalization.ipynb
@@ -28,14 +28,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "id": "95e7bb36-27b2-4158-8b1f-601373f4418c",
    "metadata": {},
    "outputs": [],
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "id": "bc158660-784e-4ff1-9ad2-df9b03b36fba",
    "metadata": {},
    "outputs": [],
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "id": "0e5378bb-d28f-4acd-9fb5-b5baccf73f24",
    "metadata": {},
    "outputs": [],
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "id": "a4f3e278-699b-456c-8704-6cf9388f2d3e",
    "metadata": {},
    "outputs": [],
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "203449c9-50f0-4012-b934-d058d335855a",
    "metadata": {},
    "outputs": [],
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "91288302-59be-4af0-9dca-a9b56dd34542",
    "metadata": {},
    "outputs": [],
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "7763f4e9-f249-432a-a10e-378bea3e6fc1",
    "metadata": {},
    "outputs": [],
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "f232b2f9-f382-4701-a576-33f64538d610",
    "metadata": {},
    "outputs": [],
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "1ced28db-0ac6-4856-b90f-8f440609a32d",
    "metadata": {},
    "outputs": [],
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "5b5ef758-5180-42ce-a7a5-c993f2c9582c",
    "metadata": {},
    "outputs": [],
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "c3a65d33-6c1e-4dd2-baf3-787bee05d5ec",
    "metadata": {},
    "outputs": [],
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "2ea30a00-8e72-41e3-9d13-bd2c5a2ad973",
    "metadata": {},
    "outputs": [],
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 42,
    "id": "029231d5-8a62-498f-818c-def8b509513d",
    "metadata": {},
    "outputs": [],
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "id": "05295c70-a3b1-4640-ab86-4fe9a88e4df3",
    "metadata": {},
    "outputs": [],
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "id": "dee63eb4-a0f8-44e6-bef6-7ef8ff22dd49",
    "metadata": {},
    "outputs": [],
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 45,
    "id": "ee881631-3b63-4ed1-b7f8-42d19db4e7e0",
    "metadata": {},
    "outputs": [
@@ -1857,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 46,
    "id": "455f1f68-8a22-45fc-890c-8cd7cef6a411",
    "metadata": {},
    "outputs": [],
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 47,
    "id": "fde52b88-58e7-432e-8dbe-235002469bd9",
    "metadata": {},
    "outputs": [],
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "id": "7dc79489-af46-4742-98cf-a6fe44114944",
    "metadata": {},
    "outputs": [],
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 49,
    "id": "862482e7-9446-4e09-ade8-faafc98dbdd2",
    "metadata": {},
    "outputs": [],
@@ -1910,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 50,
    "id": "115489ac-adec-4ad5-b1dd-3b87699fa484",
    "metadata": {},
    "outputs": [],
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 51,
    "id": "22647680-3d17-479c-ae62-e23d26a8fc39",
    "metadata": {},
    "outputs": [],
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 52,
    "id": "204bb179-b764-4ab7-8b3a-56d8497a3471",
    "metadata": {},
    "outputs": [],
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 53,
    "id": "2791f6be-d1e2-4942-93de-814a036f4a77",
    "metadata": {},
    "outputs": [],
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 54,
    "id": "d7105582-b024-4f66-a383-a06f1601ab5c",
    "metadata": {},
    "outputs": [],
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 55,
    "id": "1f36490c-a9d9-4dae-bb15-ce16fafb3ad4",
    "metadata": {},
    "outputs": [
@@ -2030,9 +2030,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef8d9e20-1a8a-47d2-b670-d8224449725c",
+   "metadata": {},
+   "source": [
+    "## Correlation of Colocalising QTL\n",
+    "\n",
+    "Do cis-eQTL and cis-pQTl that colocalize also have highly correlated eGenes/pGenes?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201baa19-ad9c-4edd-ac8f-1c1c6d7b1b18",
+   "id": "7429e7ea-a760-473c-9437-5f35c619e3b5",
    "metadata": {},
    "outputs": [],
    "source": []
