Updated colocalisation and fine mapping

--- a/01_Colocalization/scripts/06_compare_credibile_sets.ipynb
+++ b/01_Colocalization/scripts/06_compare_credibile_sets.ipynb
@@ -5,7 +5,7 @@
    "id": "c1fe7d9c-7ce4-4c92-8861-2b427ed33315",
    "metadata": {},
    "source": [
-    "# Compare Credibility Sets\n",
+    "# Compare Credibile Sets\n",
     "\n",
     "**Created**: 4 February 2022"
    ]
@@ -54,14 +54,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "7f78ed59-68a6-433b-a94e-d5a3fb55ff67",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "72835ac8-0797-4cb7-902b-755a28ff3b50",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "91913f26-a966-40ef-b7d2-0392401e4366",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "533cdf0b-b420-4dc3-ae2d-e9836d9ed266",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "7c5b7a16-300b-481a-ae9e-ccdc1a589fde",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "ba47a2df-6791-49d1-a5e8-8585a9cc9a38",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "f5dcc640-e5af-4ed9-85b5-0df738e98dcc",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "063cf81b-19e3-4af3-bcbe-0d96f8b7faed",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "49c7b316-9a7d-4a9f-a101-1785a1c144ad",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,9 @@
   {
    "cell_type": "markdown",
    "id": "6a92a357-d131-48f8-961a-cdca9248a9c8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Paired Tests of Credible Sets"
    ]
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "9937f5a2-b005-47ba-9583-74e9e32e033b",
    "metadata": {},
    "outputs": [],
@@ -697,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "10228ae9-d39d-404a-b88c-e25cb2a80166",
    "metadata": {},
    "outputs": [
@@ -768,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "3b2d87a7-617a-4df7-ac06-00c02ce910ba",
    "metadata": {},
    "outputs": [
@@ -816,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "a4092f04-2f22-4fe4-9487-94c406499c21",
    "metadata": {},
    "outputs": [
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "20768ef2-0d18-4ca0-885f-27f0f8782654",
    "metadata": {},
    "outputs": [
@@ -903,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "c501530d-68b1-4fb3-843f-1169c5146906",
    "metadata": {},
    "outputs": [
@@ -928,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "851cf406-cfb8-4214-a760-ab75f1893e61",
    "metadata": {},
    "outputs": [
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "3b243af1-e0b7-4b91-8f4c-f4ab944c53ba",
    "metadata": {},
    "outputs": [],
@@ -985,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "973e57e2-da24-484f-8c3a-3de80ee31a25",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "edd52bc3-d18a-4c2f-a61a-8cb058820e7b",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "id": "20c31b71-1732-4c9d-a393-d3949e6cc641",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "c240b0e8-4119-4f24-a449-6b7dba2baa46",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "id": "0064538f-952b-4968-a42c-40d343283266",
    "metadata": {},
    "outputs": [],
@@ -1166,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "id": "4fd21ba3-9809-4ff0-a59e-53c180814083",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "id": "61c493e0-93d4-456d-8788-2bf076fa5719",
    "metadata": {},
    "outputs": [
