--- a/01_Colocalization/scripts/04_cis_eqtl_module_qtl_all_pcs_colocalization.ipynb
+++ b/01_Colocalization/scripts/04_cis_eqtl_module_qtl_all_pcs_colocalization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d9c58c11-9879-4343-aa44-c3b0444e999e",
    "metadata": {},
    "outputs": [
@@ -28,14 +28,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b36e8f03-51e1-4b8c-a74d-a6ffa6ff01bb",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "315e5793-b5c7-40ca-a628-c78216eaefd4",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "390fffd6-ad23-4c4c-a2ad-cd591b8bc83d",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "745ca4da-4df0-4ec5-8eeb-3cd8302d8c22",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8a82af54-1567-40b1-8a08-3d0cf4524330",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b827c749-857f-48ba-8412-82fa07c9faf9",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6f0bff03-2b5e-4fb1-a928-cb9becf206ec",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a8465555-64bf-49b2-9aa6-647fa1b60b3a",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "93dd30f5-93c3-4190-aef1-80e2e2f9d65a",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0d1ddd6b-99b6-449c-91f8-c741f2cb3c60",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1bd2f093-61ed-4438-8361-c6cb1a2ab4ad",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "3ed9fea7-1f8c-4a97-94d1-a6b026ef251c",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "cd2d7e8a-ebe3-47b9-ad9b-1ce5c3de1fd1",
    "metadata": {},
    "outputs": [],
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "64355001-bd3d-43b3-a1ac-8b3b49f900c5",
    "metadata": {},
    "outputs": [],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "2cd82a31-0c31-459f-b28e-c6720ac97a9b",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "57364621-ce72-4153-941e-d6f09b38d5fd",
    "metadata": {},
    "outputs": [],
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "6daafb45-da34-4b4a-894a-b4cc45f5a7e2",
    "metadata": {},
    "outputs": [],
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "fbea8b12-e80e-4d7c-8568-8afd456ff00f",
    "metadata": {},
    "outputs": [],
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "c1fc55bc-2963-4e2b-a6f3-f458c2c28ff2",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "8d0dfc00-2bd6-46b8-ad75-71b435382c95",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "43428fd3-42e7-4a90-a677-c695955d23fe",
    "metadata": {
     "tags": []
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "e2672a5b-c96f-43ae-922e-d52ef6928fd6",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "f7cdc4e0-b41c-4681-a24c-08be31b70f2e",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "6b3cce06-a7c3-404e-98ab-d46eb929d64b",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "cff533d1-20ca-4afb-9675-aaf02241c921",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "9f04e2f3-1a8c-4df1-bf9d-307f6bda9a9f",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "a01bdfe8-b18b-4d53-8cc1-e6005c59c6c4",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "id": "2804e423-1c10-4690-acec-c9a93858cece",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "id": "31405e77-d959-4163-99cf-c1a4cff10cbf",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "id": "f76e3222-5961-4e93-a90a-aa372bc40162",
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "id": "eabfecbd-82df-4e45-9d69-6f28992d9573",
    "metadata": {},
    "outputs": [
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "id": "10f440be-6c4e-496d-971e-3ec7f551a864",
    "metadata": {},
    "outputs": [
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "id": "eb351415-a861-4707-8fd9-65af46b8fa02",
    "metadata": {},
    "outputs": [
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "id": "be78b4bb-fbde-46fd-a03c-320b228175ed",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 36,
    "id": "8535924a-3325-4c1b-8cd5-70ffe1f82c3b",
    "metadata": {},
    "outputs": [
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "753b6006-3535-40bf-8e01-8d56d50c1b5d",
    "metadata": {},
    "outputs": [],
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "0c76c1fb-9ce2-488b-ab52-1e1295db3ff7",
    "metadata": {},
    "outputs": [],
