--- a/03_Functional_Interpretation/scripts/cheers_ram_mohan_et_al.ipynb
+++ b/03_Functional_Interpretation/scripts/cheers_ram_mohan_et_al.ipynb
@@ -73,14 +73,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -1049,6 +1049,86 @@
    ],
    "source": [
     "head(all.norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ad68cc16-0bf7-4859-b77b-fc6f231539b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 11</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>chr</th><th scope=col>start</th><th scope=col>end</th><th scope=col>LTA</th><th scope=col>LPS</th><th scope=col>FLAG</th><th scope=col>R848</th><th scope=col>BGP</th><th scope=col>HMGB1</th><th scope=col>Control</th><th scope=col>ID</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>chr19:51646821-51647346</th><td>chr19</td><td>51646821</td><td>51647346</td><td>0.3195</td><td>0.3169</td><td>0.6782</td><td>0.3145</td><td>0.3241</td><td>0.3076</td><td>0.1972</td><td>chr19:51646821-51647346</td></tr>\n",
+       "\t<tr><th scope=row>chr8:79840133-79840658</th><td>chr8 </td><td>79840133</td><td>79840658</td><td>0.3958</td><td>0.2680</td><td>0.6719</td><td>0.2241</td><td>0.3485</td><td>0.2632</td><td>0.2813</td><td>chr8:79840133-79840658 </td></tr>\n",
+       "\t<tr><th scope=row>chr10:58448196-58448721</th><td>chr10</td><td>58448196</td><td>58448721</td><td>0.2957</td><td>0.2861</td><td>0.6689</td><td>0.2890</td><td>0.3194</td><td>0.3537</td><td>0.2696</td><td>chr10:58448196-58448721</td></tr>\n",
+       "\t<tr><th scope=row>chr7:94417437-94417962</th><td>chr7 </td><td>94417437</td><td>94417962</td><td>0.3259</td><td>0.3095</td><td>0.6640</td><td>0.2828</td><td>0.4242</td><td>0.2476</td><td>0.1893</td><td>chr7:94417437-94417962 </td></tr>\n",
+       "\t<tr><th scope=row>chr7:74134084-74134609</th><td>chr7 </td><td>74134084</td><td>74134609</td><td>0.2604</td><td>0.2437</td><td>0.6621</td><td>0.3836</td><td>0.2986</td><td>0.3808</td><td>0.2302</td><td>chr7:74134084-74134609 </td></tr>\n",
+       "\t<tr><th scope=row>chr9:36728431-36728956</th><td>chr9 </td><td>36728431</td><td>36728956</td><td>0.3464</td><td>0.2560</td><td>0.6513</td><td>0.3018</td><td>0.2991</td><td>0.3404</td><td>0.3062</td><td>chr9:36728431-36728956 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 11\n",
+       "\\begin{tabular}{r|lllllllllll}\n",
+       "  & chr & start & end & LTA & LPS & FLAG & R848 & BGP & HMGB1 & Control & ID\\\\\n",
+       "  & <chr> & <int> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\tchr19:51646821-51647346 & chr19 & 51646821 & 51647346 & 0.3195 & 0.3169 & 0.6782 & 0.3145 & 0.3241 & 0.3076 & 0.1972 & chr19:51646821-51647346\\\\\n",
+       "\tchr8:79840133-79840658 & chr8  & 79840133 & 79840658 & 0.3958 & 0.2680 & 0.6719 & 0.2241 & 0.3485 & 0.2632 & 0.2813 & chr8:79840133-79840658 \\\\\n",
+       "\tchr10:58448196-58448721 & chr10 & 58448196 & 58448721 & 0.2957 & 0.2861 & 0.6689 & 0.2890 & 0.3194 & 0.3537 & 0.2696 & chr10:58448196-58448721\\\\\n",
+       "\tchr7:94417437-94417962 & chr7  & 94417437 & 94417962 & 0.3259 & 0.3095 & 0.6640 & 0.2828 & 0.4242 & 0.2476 & 0.1893 & chr7:94417437-94417962 \\\\\n",
+       "\tchr7:74134084-74134609 & chr7  & 74134084 & 74134609 & 0.2604 & 0.2437 & 0.6621 & 0.3836 & 0.2986 & 0.3808 & 0.2302 & chr7:74134084-74134609 \\\\\n",
+       "\tchr9:36728431-36728956 & chr9  & 36728431 & 36728956 & 0.3464 & 0.2560 & 0.6513 & 0.3018 & 0.2991 & 0.3404 & 0.3062 & chr9:36728431-36728956 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 11\n",
+       "\n",
+       "| <!--/--> | chr &lt;chr&gt; | start &lt;int&gt; | end &lt;int&gt; | LTA &lt;dbl&gt; | LPS &lt;dbl&gt; | FLAG &lt;dbl&gt; | R848 &lt;dbl&gt; | BGP &lt;dbl&gt; | HMGB1 &lt;dbl&gt; | Control &lt;dbl&gt; | ID &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| chr19:51646821-51647346 | chr19 | 51646821 | 51647346 | 0.3195 | 0.3169 | 0.6782 | 0.3145 | 0.3241 | 0.3076 | 0.1972 | chr19:51646821-51647346 |\n",
+       "| chr8:79840133-79840658 | chr8  | 79840133 | 79840658 | 0.3958 | 0.2680 | 0.6719 | 0.2241 | 0.3485 | 0.2632 | 0.2813 | chr8:79840133-79840658  |\n",
+       "| chr10:58448196-58448721 | chr10 | 58448196 | 58448721 | 0.2957 | 0.2861 | 0.6689 | 0.2890 | 0.3194 | 0.3537 | 0.2696 | chr10:58448196-58448721 |\n",
+       "| chr7:94417437-94417962 | chr7  | 94417437 | 94417962 | 0.3259 | 0.3095 | 0.6640 | 0.2828 | 0.4242 | 0.2476 | 0.1893 | chr7:94417437-94417962  |\n",
+       "| chr7:74134084-74134609 | chr7  | 74134084 | 74134609 | 0.2604 | 0.2437 | 0.6621 | 0.3836 | 0.2986 | 0.3808 | 0.2302 | chr7:74134084-74134609  |\n",
+       "| chr9:36728431-36728956 | chr9  | 36728431 | 36728956 | 0.3464 | 0.2560 | 0.6513 | 0.3018 | 0.2991 | 0.3404 | 0.3062 | chr9:36728431-36728956  |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "                        chr   start    end      LTA    LPS    FLAG   R848  \n",
+       "chr19:51646821-51647346 chr19 51646821 51647346 0.3195 0.3169 0.6782 0.3145\n",
+       "chr8:79840133-79840658  chr8  79840133 79840658 0.3958 0.2680 0.6719 0.2241\n",
+       "chr10:58448196-58448721 chr10 58448196 58448721 0.2957 0.2861 0.6689 0.2890\n",
+       "chr7:94417437-94417962  chr7  94417437 94417962 0.3259 0.3095 0.6640 0.2828\n",
+       "chr7:74134084-74134609  chr7  74134084 74134609 0.2604 0.2437 0.6621 0.3836\n",
+       "chr9:36728431-36728956  chr9  36728431 36728956 0.3464 0.2560 0.6513 0.3018\n",
+       "                        BGP    HMGB1  Control ID                     \n",
+       "chr19:51646821-51647346 0.3241 0.3076 0.1972  chr19:51646821-51647346\n",
+       "chr8:79840133-79840658  0.3485 0.2632 0.2813  chr8:79840133-79840658 \n",
+       "chr10:58448196-58448721 0.3194 0.3537 0.2696  chr10:58448196-58448721\n",
+       "chr7:94417437-94417962  0.4242 0.2476 0.1893  chr7:94417437-94417962 \n",
+       "chr7:74134084-74134609  0.2986 0.3808 0.2302  chr7:74134084-74134609 \n",
+       "chr9:36728431-36728956  0.2991 0.3404 0.3062  chr9:36728431-36728956 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "all.norm %>%\n",
+    "    dplyr::arrange(desc(FLAG)) %>%\n",
+    "    head()"
    ]
   },
   {
