Final functional analyses

--- a/03_Functional_Interpretation/scripts/atac_04_all_peak_sets.ipynb
+++ b/03_Functional_Interpretation/scripts/atac_04_all_peak_sets.ipynb
@@ -20,10 +20,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "6db2fd5e-838f-4086-ab6a-6f00a87b9b9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "Loading required package: grid\n",
+      "\n",
+      "========================================\n",
+      "ComplexHeatmap version 2.6.2\n",
+      "Bioconductor page: http://bioconductor.org/packages/ComplexHeatmap/\n",
+      "Github page: https://github.com/jokergoo/ComplexHeatmap\n",
+      "Documentation: http://jokergoo.github.io/ComplexHeatmap-reference\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. Complex heatmaps reveal patterns and correlations in multidimensional \n",
+      "  genomic data. Bioinformatics 2016.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(ComplexHeatmap))\n",
+      "========================================\n",
+      "\n",
+      "\n",
+      "========================================\n",
+      "circlize version 0.4.13\n",
+      "CRAN page: https://cran.r-project.org/package=circlize\n",
+      "Github page: https://github.com/jokergoo/circlize\n",
+      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. circlize implements and enhances circular visualization\n",
+      "  in R. Bioinformatics 2014.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(circlize))\n",
+      "========================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(data.table)\n",
@@ -46,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "9548bb6b-2649-43ed-b348-bfeb4dd3d3d9",
    "metadata": {},
    "outputs": [],
@@ -72,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "71d29eac-6055-4aa8-9a88-975708bf1516",
    "metadata": {},
    "outputs": [
@@ -143,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "id": "50003974-af3c-407f-8f8f-13546bbd1240",
    "metadata": {},
    "outputs": [],
@@ -167,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "8f622f3d-4b09-4500-b966-c2f05d0ba430",
    "metadata": {},
    "outputs": [
@@ -238,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "f7471fe1-c818-456d-8023-8964a692ff12",
    "metadata": {},
    "outputs": [],
@@ -263,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "021bb051-a792-486c-9336-9b73add930db",
    "metadata": {},
    "outputs": [
@@ -334,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "6de20262-2636-4b6e-b564-92ffc40ef835",
    "metadata": {},
    "outputs": [],
@@ -344,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "455109f5-ab4b-41a7-8a00-aea50c3a856d",
    "metadata": {},
    "outputs": [
@@ -415,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "id": "e586bda2-c07a-4260-8169-88ff2d712a07",
    "metadata": {},
    "outputs": [],
@@ -426,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "id": "dfce51b5-782f-480e-8cb8-11b4c265904b",
    "metadata": {},
    "outputs": [
@@ -497,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "108256ae-a0b8-4bd9-9be2-a412d80dc88e",
    "metadata": {},
    "outputs": [],
@@ -508,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "e38b029d-7f3d-4f59-833c-06cfb92daba1",
    "metadata": {},
    "outputs": [
@@ -579,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "c95b74bb-66df-485e-b800-d6bc79f9da1a",
    "metadata": {},
    "outputs": [],
@@ -590,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "bced7751-fd1a-4b1f-a670-c9dc0a86462a",
    "metadata": {},
    "outputs": [
@@ -671,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "id": "f0690a55-abde-4a3b-8b04-229ef660f69e",
    "metadata": {},
    "outputs": [
@@ -706,12 +770,12 @@
     "    ggplot_theme +\n",
     "    theme(axis.text.x=element_text(angle=30, hjust=1), axis.title.x=element_blank())\n",
     "\n",
-    "ggsave(\"03_Functional_Interpretation/results/immune_group_peak_counts.svg\", width=16, height=10)"
+    "ggsave(\"03_Functional_Interpretation/results/immune_group_peak_counts.pdf\", width=16, height=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "id": "821e8663-bce0-463b-9872-752c86849ef8",
    "metadata": {},
    "outputs": [
@@ -742,12 +806,12 @@
     "    ggplot_theme +\n",
     "    theme(axis.text.x=element_text(angle=30, hjust=1), axis.title.x=element_blank())\n",
     "\n",
-    "ggsave(\"03_Functional_Interpretation/results/immune_cell_peak_counts.svg\", width=16, height=10)"
+    "ggsave(\"03_Functional_Interpretation/results/immune_cell_peak_counts.pdf\", width=16, height=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "id": "534cb784-19d3-4724-bf20-0aebf76ce4e3",
    "metadata": {},
    "outputs": [
@@ -786,7 +850,7 @@
     "    ggplot_theme +\n",
     "    theme(axis.text.x=element_text(angle=30, hjust=1), axis.title.x=element_blank())\n",
     "\n",
-    "ggsave(\"03_Functional_Interpretation/results/neutrophil_group_peak_counts.svg\", width=10, height=10)"
+    "ggsave(\"03_Functional_Interpretation/results/neutrophil_group_peak_counts.pdf\", width=10, height=10)"
    ]
   },
   {
